# TKJT

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
CMake/: FindOCCT.cmake  FindTBB.cmake
Debug/: libTKJT.dylib  makefile  objects.mk  sources.mk
Debug/src/JtAttribute/: JtAttribute_Base.d  JtAttribute_GeometricTransform.d  JtAttribute_Material.d  subdir.mk
Debug/src/JtData/: JtData_DeferredObject.d  JtData_FileReader.d  JtData_Inflate.d  JtData_Model.d  JtData_Object.d  JtData_Reader.d  JtData_Types.d  subdir.mk
Debug/src/JtDecode/: JtDecode_BitReader.d  JtDecode_Int32CDP.d  JtDecode_Int32CDP_Arithmetic.d  JtDecode_Int32CDP_Bitlength.d  JtDecode_Int32CDP_Bitlength2.d  JtDecode_Int32CDP_Bits.d  JtDecode_Int32CDP_Chopper.d  JtDecode_Int32CDP_Huffman.d  JtDecode_Int32CDP_Null.d  JtDecode_MeshCoderDriver.d  JtDecode_ProbContext.d  JtDecode_Unpack.d  JtDecode_VertexData.d  JtDecode_VertexData_Deering.d  JtDecode_VertexData_ExpMant.d  JtDecode_VertexData_Quantized.d  subdir.mk
Debug/src/JtElement/: JtElement_MetaData_PMIManager.d  JtElement_ShapeLOD_Base.d  JtElement_ShapeLOD_TriStripSet.d  JtElement_ShapeLOD_Vertex.d  JtElement_XTBRep.d  subdir.mk
Debug/src/JtNode/: JtNode_Base.d  JtNode_Group.d  JtNode_Instance.d  JtNode_LOD.d  JtNode_MetaData.d  JtNode_Part.d  JtNode_Partition.d  JtNode_RangeLOD.d  JtNode_Shape_Base.d  JtNode_Shape_TriStripSet.d  JtNode_Shape_Vertex.d  subdir.mk
Debug/src/JtProperty/: JtProperty_Base.d  JtProperty_LateLoaded.d  JtProperty_String.d  subdir.mk
Debug/src/JtToTopoDS/: JtToTopoDS_Builder.d  subdir.mk
src/JtAttribute/: JtAttribute_Base.cxx  JtAttribute_Base.hxx  JtAttribute_GeometricTransform.cxx  JtAttribute_GeometricTransform.hxx  JtAttribute_Material.cxx  JtAttribute_Material.hxx
src/JtData/: JtData_ByteSwap.hxx  JtData_DeferredObject.cxx  JtData_DeferredObject.hxx  JtData_Model.cxx  JtData_Model.hxx  JtData_Object.cxx  JtData_Object.hxx  JtData_ReaderInterface.hxx  JtData_Types.cxx
src/JtDecode/: JtDecode_MeshCoderDriver.cxx
src/JtElement/: JtElement_MetaData_PMIManager.cxx  JtElement_MetaData_PMIManager.hxx  JtElement_ShapeLOD_Base.cxx  JtElement_ShapeLOD_Base.hxx  JtElement_ShapeLOD_TriStripSet.cxx  JtElement_ShapeLOD_TriStripSet.hxx  JtElement_ShapeLOD_Vertex.cxx  JtElement_ShapeLOD_Vertex.hxx  JtElement_XTBRep.cxx  JtElement_XTBRep.hxx
src/JtNode/: JtNode_Base.cxx  JtNode_Base.hxx  JtNode_Group.cxx  JtNode_Group.hxx  JtNode_Instance.cxx  JtNode_Instance.hxx  JtNode_LOD.cxx  JtNode_LOD.hxx  JtNode_MetaData.cxx  JtNode_MetaData.hxx  JtNode_Part.cxx  JtNode_Part.hxx  JtNode_Partition.cxx  JtNode_Partition.hxx  JtNode_RangeLOD.cxx  JtNode_RangeLOD.hxx  JtNode_Shape_Base.cxx  JtNode_Shape_Base.hxx  JtNode_Shape_TriStripSet.cxx  JtNode_Shape_TriStripSet.hxx  JtNode_Shape_Vertex.cxx  JtNode_Shape_Vertex.hxx
src/JtProperty/: JtProperty_Base.cxx  JtProperty_Base.hxx  JtProperty_LateLoaded.cxx  JtProperty_LateLoaded.hxx  JtProperty_String.cxx  JtProperty_String.hxx
src/JtToTopoDS/: JtToTopoDS_Builder.cxx  JtToTopoDS_Builder.hxx
